Bug 613722 - Do not make <embed hidden> display none. r=jst a=blocking-betaN